force-app/main/default/objects/Party__c/Party__c.object-meta.xml
<CustomObject>
    <label>Party</label>
    <nameField>
        <label>Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>