force-app/main/default/objects/Party__c/fields/Admission_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admission_Fee__c</fullName>
    <label>Admission Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>