force-app/main/default/objects/Party__c/fields/Party_Date__c.field-meta.xml
<CustomField>
    <fullName>Party_Date__c</fullName>
    <label>Party Date</label>
    <type>Date</type>
</CustomField>