force-app/main/default/objects/Party__c/fields/Preferred_Drink__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Drink__c</fullName>
    <label>Preferred Drink</label>
    <length>50</length>
    <type>Text</type>
</CustomField>