force-app/main/default/objects/Party__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Preferred_Drink__c</columns>
    <columns>Attendees__c</columns>
    <columns>Admission_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>